--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     }
     .canvas-wrapper {
       display: flex;
-      flex-direction: column;
+      flex-direction: row;
       align-items: center;
     }
     canvas {
