--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     
 .canvas-wrapper {
   display: flex;
-  flex-direction: column;
-  align-items: left;
+  flex-direction: row;
+  align-items: center;
 }
 
 canvas {
