--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
     
 .canvas-wrapper {
   display: flex;
-  flex-direction: column;
-  align-items: left;
+  gap: 10px;
+  margin-top: 10px;
+  flex-wrap: wrap;
+  justify-content: left;
 }
 
 canvas {
