--- a/index.html
+++ b/index.html
@@ -19,11 +19,9 @@
     }
     
 .canvas-wrapper {
-  display: flex;
-  gap: 10px;
-  margin-top: 10px;
-  flex-wrap: wrap;
-  justify-content: left;
+ display: flex;
+  flex-direction: column;
+  align-items: left;
 }
 
 canvas {
@@ -108,8 +106,8 @@ canvas {
         flex: 1 0 30%;
       }
       .canvas-buttons {
-        flex-direction: column;
-        align-items: center;
+        flex-direction: row;
+        align-items: left;
       }
     }
   </style>
