--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ canvas {
       }
       .canvas-buttons {
         flex-direction: row;
-        align-items: left;
+        align-items: center;
       }
     }
   </style>
