--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     .canvas-wrapper {
       display: flex;
-      flex-direction: column;
+      flex-direction: row;
       align-items: center;
     }
 
