--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
       .canvas-buttons {
         flex-direction: row;
-        align-items: center;
+        align-items: left;
       }
     }
   </style>
