--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <title>Triangle Area Measurement</title>
-  <link rel="manifest" href="manifest.json" />
+  <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#00796b"/>
   <style>
-    body {
+    html, body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background: linear-gradient(to right, #e0f7fa, #ffffff);
       padding: 20px;
       color: #333;
+      overscroll-behavior-y: contain;
     }
 
     h2 {
@@ -21,7 +22,7 @@
 
     .canvas-wrapper {
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
       align-items: center;
     }
 
@@ -102,14 +103,6 @@
       color: #004d40;
     }
 
-    #acres {
-      text-align: center;
-      font-size: 1rem;
-      color: #6e3707;
-      font-weight: bold
-      margin-top: 5px;
-    }
-
     @media (max-width: 600px) {
       body {
         padding: 10px;
@@ -127,7 +120,7 @@
       }
 
       .canvas-buttons {
-        flex-direction: row;
+        flex-direction: column;
         align-items: center;
       }
     }
@@ -145,7 +138,7 @@
   </div>
 
   <div id="controls">
-    <label for="unit">Unit of Measurement: </label>
+    <label for="unit">Unit of Measurement:</label>
     <select id="unit">
       <option value="m">Meters</option>
       <option value="ft">Feet</option>
@@ -164,11 +157,5 @@
     </div>
 
     <button class="calculate-btn" onclick="calculateArea()">Calculate Area</button>
-
     <p id="result"></p>
-    <p id="acres"></p>
   </div>
-
-  <script src="script.js"></script>
-</body>
-</html>
