--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       }
 
       .canvas-buttons {
-        flex-direction: column;
+        flex-direction: row;
         align-items: center;
       }
     }
