--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     .canvas-wrapper {
       display: flex;
-      flex-direction: column;
+      flex-direction: row;
       align-items: center;
     }
 
