--- a/index.html
+++ b/index.html
@@ -159,3 +159,6 @@
     <button class="calculate-btn" onclick="calculateArea()">Calculate Area</button>
     <p id="result"></p>
   </div>
+  <script src="script.js"></script>
+</body>
+</html>
