--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#00796b"/>
   <style>
-    body {
+     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background: linear-gradient(to right, #e0f7fa, #ffffff);
       padding: 20px;
       color: #333;
-      overscroll-behavior-y: contain;
     }
 
     h2 {
@@ -22,7 +21,7 @@
 
     .canvas-wrapper {
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
       align-items: center;
     }
 
@@ -103,6 +102,14 @@
       color: #004d40;
     }
 
+    #acres {
+      text-align: center;
+      font-size: 1rem;
+      color: #6e3707;
+      font-weight: bold
+      margin-top: 5px;
+    }
+
     @media (max-width: 600px) {
       body {
         padding: 10px;
@@ -120,7 +127,7 @@
       }
 
       .canvas-buttons {
-        flex-direction: row;
+        flex-direction: column;
         align-items: center;
       }
     }
@@ -138,7 +145,7 @@
   </div>
 
   <div id="controls">
-    <label for="unit">Unit of Measurement:</label>
+    <label for="unit">Unit of Measurement: </label>
     <select id="unit">
       <option value="m">Meters</option>
       <option value="ft">Feet</option>
@@ -157,7 +164,9 @@
     </div>
 
     <button class="calculate-btn" onclick="calculateArea()">Calculate Area</button>
+
     <p id="result"></p>
+    <p id="acres"></p>
   </div>
   <script src="script.js"></script>
 </body>
